--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,55 @@
+:root {
+  /* VARIABLES */
+  /* card */
+  --card-height: 22.625rem;
+  --card-width: 18rem;
+}
+
 /* CHARACTERISTICS */
 .hidden {
   visibility: hidden;
 }
 
 /* CONTAINERS */
-/* bookList */
-#bookList {
+/* display */
+#display {
   gap: 1rem;
 }
 /* card-book */
 .card-book {
   padding: 1rem;
-  width: 18rem;
+  height: var(--card-height);
+  width: var(--card-width);
 }
-
 .card-book input {
-  border: none;
+  border-style: none;
+}
+.card-book input:read-only {
+  background-color: transparent;
 }
 .card-book input[type="text"] {
   text-overflow: ellipsis;
 }
 .card-book label {
-  padding-left: 1.5rem;
+  padding-left: 1rem;
+}
+.card-book #actionBtnContainer {
+  margin-top: 1rem;
+}
+.card-book #actionBtnContainer .btn {
+  width: 7rem;
+}
+/* addBookCard */
+#addBookCard {
+  height: var(--card-height);
+  width: var(--card-width);
 }
 
-/* btn-container-action */
-.btn-container-action .btn {
-  width: 7rem;
+/* BUTTONS */
+/* addBookBtn */
+#addBookBtn {
+  width: 100%;
+  height: 100%;
 }
 
 /* TEXT */
