--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,15 +39,12 @@
 .card-book .action-btn-container .btn {
   width: 7rem;
 }
-/* addBookCard */
-#addBookCard {
+/* showModalCard*/
+#showModalCard {
   height: var(--card-height);
   width: var(--card-width);
 }
-
-/* BUTTONS */
-/* addBookBtn */
-#addBookBtn {
+#showModalCard #showModalBtn {
   width: 100%;
   height: 100%;
 }
