--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,11 @@
   width: 100%;
   height: 100%;
 }
+/* card-list-empty */
+.card-list-empty {
+  height: var(--card-height);
+  width: var(--card-width);
+}
 
 /* TEXT */
 .text-ellipsis {
